# embyx-web

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
frontend/src/test/: setup.ts
src/embyx_web/: __init__.py  __main__.py  api.py  bootstrap.py  locking.py  runtime_adapters.py  settings.py
src/embyx_web/fill_actor/: __init__.py  cloud_moves.py  errors.py  feeds.py  jobs.py  models.py  persistence.py  ports.py  service.py  sqlite_repository.py
src/embyx_web/static/: index.html
src/embyx_web/static/assets/: index-BOc4pjum.js  index-BaWdeQtO.js  index-BqbC-3To.js  index-Bwz9-zbc.css  index-ByZIVK4c.js  index-CH-mfqXg.js  index-Cbhlun8o.css  index-Cgqyv9U6.js  index-DFs7Nf_0.js  index-DULTJsep.css  index-DncQ8VlL.css  index-fr8rBwD1.css
tests/: __init__.py  container_smoke.sh  test_api.py  test_bootstrap.py  test_cloud_move_persistence.py  test_cloud_move_service.py  test_cloud_moves.py  test_fill_actor_feeds.py  test_fill_actor_jobs.py  test_fill_actor_persistence.py  test_fill_actor_recovery.py  test_fill_actor_service.py  test_locking.py  test_runtime_adapters.py  test_settings.py
