[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embyx-web"
version = "0.2.0"
description = "Web management surface for embyx workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "defusedxml>=0.7,<1",
  "fastapi>=0.116,<1",
  "httpx2>=2.5,<3",
  "pydantic>=2.11,<3",
  "uvicorn>=0.35,<1",
]

[project.scripts]
embyx-web = "embyx_web.__main__:main"

[dependency-groups]
dev = [
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "ruff>=0.14,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/embyx_web"]

[tool.hatch.build.targets.sdist]
exclude = [
  "frontend/.playwright-cli",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",       # Docstrings are optional for the small phase-one surface.
  "COM812",  # Conflicts with the formatter.
  "Q000",    # The formatter enforces single quotes.
  "Q003",    # The formatter enforces single quotes.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",
  "PLR0913",
  "PLR2004",
  "S101",
]

[tool.ruff.format]
quote-style = "single"
